[build-system]
requires = ['findfile>=1.7.9.8',
    'autocuda>=0.11',
    'metric-visualizer>=0.5.5',
    'boostaug>=2.2.3',
    'spacy',
    'networkx',
    'seqeval',
    'update-checker',
    'typing_extensions',
    'tqdm',
    'pytorch_warmup',
    'termcolor',
    'gitpython', # need git installed in your OS
    'gdown>=4.4.0',
    'transformers>4.20.0',
    'torch>1.0.0',
    'sentencepiece'
]
build-backend = "flit_core.buildapi"

[project]
name = "PyABSA"
authors = [{ name = "Heng Yang", email = "hy345@exeter.ac.uk" }]
dynamic = ["version", "description"]
